[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leakage-buster"
version = "0.5.0-rc1"
description = "Time leakage & fold/definition auditor for tabular ML."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name"}]
license = {text="MIT"}
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "jinja2>=3.1",
]

[project.scripts]
leakage-buster = "leakage_buster.cli:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
